# blade_alley_irr

./: .gitignore  CMakeLists.txt  README.md
assets/: colona.X  heli.X  nlo.X  skybox.X  tarelka.X
model/: susanna.blend  susanna.mtl
src/: main.cpp
